--- a/MyMovieApp/Base.lproj/Main.storyboard
+++ b/MyMovieApp/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QTw-iM-sZZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QTw-iM-sZZ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -143,19 +142,18 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqF-4S-k0I" userLabel="title">
                                                     <rect key="frame" x="32" y="113" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xBx-wk-p8Q" userLabel="overview">
                                                     <rect key="frame" x="32" y="141" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <color key="backgroundColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="xBx-wk-p8Q" firstAttribute="top" secondItem="zqF-4S-k0I" secondAttribute="bottom" constant="7" id="63I-2D-pol"/>
                                             <constraint firstItem="TNw-FR-uuh" firstAttribute="top" secondItem="JNA-l1-yeZ" secondAttribute="top" constant="5" id="Gok-GD-22y"/>
@@ -221,55 +219,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="drw-f5-f1z">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="240"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="drw-f5-f1z" secondAttribute="height" multiplier="5:2" id="xPS-n1-IhL"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkA-qS-gop" userLabel="overview">
-                                <rect key="frame" x="5" y="245" width="590" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="vD9-zg-NcX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="vD9-zg-NcX"/>
-                                    </mask>
-                                </variation>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n3R-Xs-u6d">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5MG-eg-PlZ" userLabel="Sub View">
+                                        <rect key="frame" x="180" y="236" width="240" height="128"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="drw-f5-f1z">
+                                                <rect key="frame" x="-118" y="-86" width="538" height="450"/>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gX7-mw-G2n">
+                                                <rect key="frame" x="-146" y="-42" width="531" height="212"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkA-qS-gop" userLabel="overview">
+                                                        <rect key="frame" x="5" y="5" width="387" height="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="leading" secondItem="QdQ-01-sjm" secondAttribute="leading" constant="5" id="5CG-Fs-dfB"/>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="leading" secondItem="QdQ-01-sjm" secondAttribute="leadingMargin" id="GKI-YU-E9k"/>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="top" secondItem="drw-f5-f1z" secondAttribute="bottom" constant="14" id="Ofj-gh-b1C"/>
-                            <constraint firstItem="drw-f5-f1z" firstAttribute="top" secondItem="QdQ-01-sjm" secondAttribute="top" id="T2B-U9-jbA"/>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="top" secondItem="drw-f5-f1z" secondAttribute="bottom" constant="5" id="TjY-pX-vud"/>
-                            <constraint firstItem="drw-f5-f1z" firstAttribute="leading" secondItem="QdQ-01-sjm" secondAttribute="leading" id="Tpe-wc-ApB"/>
-                            <constraint firstAttribute="trailing" secondItem="XkA-qS-gop" secondAttribute="trailing" constant="5" id="Wgk-cR-GVb"/>
-                            <constraint firstItem="f9E-2y-8qQ" firstAttribute="top" secondItem="XkA-qS-gop" secondAttribute="bottom" constant="276" id="Zhl-Qy-0OF"/>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="top" secondItem="drw-f5-f1z" secondAttribute="bottom" constant="5" id="ctS-W7-auU"/>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="leading" secondItem="QdQ-01-sjm" secondAttribute="leadingMargin" constant="5" id="hFa-gb-mXh"/>
-                            <constraint firstItem="XkA-qS-gop" firstAttribute="top" secondItem="drw-f5-f1z" secondAttribute="bottom" constant="5" id="lnq-A1-KnV"/>
-                            <constraint firstAttribute="trailing" secondItem="drw-f5-f1z" secondAttribute="trailing" id="mIT-3v-fx8"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="XkA-qS-gop" secondAttribute="trailing" constant="5" id="qVY-9K-q4e"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="GKI-YU-E9k"/>
-                                <exclude reference="Ofj-gh-b1C"/>
-                                <exclude reference="ctS-W7-auU"/>
-                                <exclude reference="hFa-gb-mXh"/>
-                                <exclude reference="qVY-9K-q4e"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Details" id="T7b-wR-BPe"/>
                     <connections>
+                        <outlet property="contentView" destination="gX7-mw-G2n" id="nG6-NP-8p1"/>
                         <outlet property="overviewLabel" destination="XkA-qS-gop" id="5JZ-5Y-Ral"/>
                         <outlet property="posterImage" destination="drw-f5-f1z" id="PIA-7f-TVr"/>
                     </connections>
@@ -300,7 +281,7 @@
         <scene sceneID="lug-Rz-z8v">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mjF-Tm-ben" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Now Playing" id="3vL-LZ-03W"/>
+                    <tabBarItem key="tabBarItem" title="Now Playing" image="nowplaying" selectedImage="nowplaying" id="3vL-LZ-03W"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="lkC-dZ-cjv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -315,11 +296,11 @@
             </objects>
             <point key="canvasLocation" x="280" y="314"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="oVG-WG-Mev">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2C2-nT-UbB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="kmz-vk-73I"/>
+                    <tabBarItem key="tabBarItem" selectedImage="toprated" systemItem="topRated" id="kmz-vk-73I"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="h5B-L2-Zpk">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -335,4 +316,8 @@
             <point key="canvasLocation" x="1114" y="1108"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="nowplaying" width="25" height="25"/>
+        <image name="toprated" width="25" height="25"/>
+    </resources>
 </document>
